[tool.poetry]
name = "ml22-roomtemp"
version = "0.1.0"
description = ""
authors = ["vdkley <pascal@vdkley.nl>"]
readme = "README.md"
packages = [{include = "ml22_roomtemp"}]

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.1.1"
pandas = "^1.5.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.2"
mypy = "^0.991"
pytest = "^7.2.0"
pep8-naming = "^0.13.2"
flake8-annotations = "^2.9.1"
hypothesis = "^6.61.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
