[tool.poetry]
name = "ml22-roomtemp"
version = "0.1.0"
description = ""
authors = ["vdkley <pascal@vdkley.nl>"]
readme = "README.md"
packages = [{include = "ml22_roomtemp"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
cookiecutter = "^2.1.1"
pandas = "^1.5.2"
loguru = "^0.6.0"
gin = "^0.1.6"
torch = "^1.13.0"
tensorflow = "^2.11.0"
ray = "^2.2.0"
torchvision = "^0.14.0"
tqdm = "^4.64.1"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.2"
mypy = "^0.991"
pytest = "^7.2.0"
pep8-naming = "^0.13.2"
flake8-annotations = "^2.9.1"
hypothesis = "^6.61.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
